<resources>
    <string name="app_name">PADC-Implicit-Intent</string>
    <string name="action_settings">Settings</string>
    
    <string name="sharecompat">Sharing with ShareCompat</string>
    <string name="nav_map">Navigating on the Map</string>
    <string name="ph_call">Making Phone Calls</string>
    <string name="send_email">Sending Emails</string>
    <string name="take_picture">Taking picture with Camera</string>
    <string name="select_pic">Selecting Picture from device storage</string>
    <string name="event_calender">Saving an event in user’s calendar</string>
    <string name="share_compat">share_compat</string>
    <string name="nav_map_btn">Nav Map</string>
    <string name="ph_call_btn">Phone Call</string>
    <string name="send_email_btn">Send Email</string>
    <string name="take_pic_btn">Take Picture</string>
    <string name="select_pic_btn">select_pic</string>
    <string name="event_btn">event</string>
    <string name="chooser_title">Share</string>
</resources>
